# modrinth.py

./: .gitignore  README.md  pyproject.toml
modrinth/: __init__.py
modrinth/py/: __init__.py
