[tool.poetry]
name = "modrinth-py"
version = "0.1.0"
description = ""
authors = ["KalebSchmidlkofer <kaleb@ashbyte.com>"]
readme = "README.md"
packages = [{include = "modrinth"}]

[tool.poetry.dependencies]
python = "^3.12"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
