[tool.poetry]
name = "modrinth-py"
version = "1.0.2"
description = ""
authors = ["KalebSchmidlkofer <kaleb@ashbyte.com>"]
readme = "README.md"
packages = [{include = "modrinth"}]

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.31.0"
loguru = "^0.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
